Build tweaks